--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App{
+  margin: 0 auto;
+  background-color: white;
+  min-height: 400px;
+  max-width: 500px;
+  box-shadow: 3px 2px 5px 3px grey;
+  padding: 10px;
+  margin-top: 20px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App h1{
+  text-align: center;
+  font-weight: 600;
+}
+.button-div{
+  display: flex;
+  justify-content: flex-end;
+}
+.button-div button{
+  width: 20%;
+  height: 30px;
+  font-size: 16px;
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
